apps/scout/src/app/scannerResult/ScannerResultPanel.module.css
.root {
  height: 100%;
  display: grid;
  grid-template-rows: max-content max-content 1fr;
}

.scroller {
  height: 100%;
  width: 100%;
  overflow-y: auto;
}

.tabSet {
  border-top: solid 1px var(--bs-border-color);
  flex: 1;
  min-height: 0;
  overflow-y: hidden;
  display: flex;
  flex-direction: column;
}

.tabControl {
  margin: 0.2rem;
}

.tabs {
  margin-right: 1rem;
}

.fullHeight {
  height: 100%;
}

.contentArea {
  display: flex;
  flex-direction: row;
  min-height: 100%;
  overflow: hidden;
}

.tabSetWrapper {
  flex: 1;
  min-width: 0;
  min-height: 0;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.withValidation {
  border-top: solid 1px var(--bs-border-color);
}

.splitLayout {
  height: 100%;
  width: 100%;
}

.splitStart {
  height: 100%;
  min-width: 0;
  min-height: 0;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.validationSidebar {
  display: flex;
  flex-direction: column;
  height: 100%;
  border-left: 1px solid var(--bs-border-color);
  background-color: var(--bs-body-bg);
  overflow-y: auto;
}

